changing project structure (divided into frontend and backend)

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,25 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/components/*": ["./components/*"],
+      "@/backend/*": ["./backend/*"],
+      "@/shared/*": ["./shared/*"],
+      "@/actions/*": ["./backend/actions/*"],
+      "@/lib/*": ["./backend/lib/*"],
+      "@/hooks/*": ["./hooks/*"],
+      "@/data/*": ["./data/*"]
     }
-  }
+  },
+  "include": [
+    "app/**/*",
+    "components/**/*", 
+    "backend/**/*",
+    "shared/**/*",
+    "hooks/**/*",
+    "data/**/*",
+    "middleware.js",
+    "next.config.mjs"
+  ]
 }
