--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,26 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 .env
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+.venv/
+.env
+.env.local
+.env.production.local
+.env.development.local
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.pytest_cache/
+.coverage
+htmlcov/
+
+# FastAPI
+.pytest_cache
