--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "cd backend && prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@arcjet/next": "^1.0.0-alpha.28",
     "@arcjet/redact": "^1.0.0-alpha.28",
     "@clerk/nextjs": "^6.3.1",
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^5.22.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -30,7 +28,6 @@
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
-    "prisma": "^5.22.0",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
