--- a/backend-python/pyproject.toml
+++ b/backend-python/pyproject.toml
@@ -19,6 +19,7 @@ pyjwt = {extras = ["crypto"], version = "^2.10.1"}
 openai = "^1.51.0"
 numpy = "^2.1.1"
 sentence-transformers = "^3.0.1"
+torch = "^2.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
